deploy/manifests/kustomized-overlay.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    seriousben.com/repo: https://github.com/seriousben/club-canin-aylmer-members
  labels:
    app.kubernetes.io/part-of: club-canin-aylmer-members
    env: prod
  name: club-canin-aylmer-members
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    seriousben.com/repo: https://github.com/seriousben/club-canin-aylmer-members
  labels:
    app.kubernetes.io/name: club-canin-aylmer-members
    app.kubernetes.io/part-of: club-canin-aylmer-members
    env: prod
  name: frontend
  namespace: club-canin-aylmer-members
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
    app.kubernetes.io/name: club-canin-aylmer-members
    app.kubernetes.io/part-of: club-canin-aylmer-members
    env: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    seriousben.com/repo: https://github.com/seriousben/club-canin-aylmer-members
  labels:
    app: frontend
    app.kubernetes.io/name: club-canin-aylmer-members
    app.kubernetes.io/part-of: club-canin-aylmer-members
    env: prod
  name: frontend
  namespace: club-canin-aylmer-members
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: frontend
      app.kubernetes.io/name: club-canin-aylmer-members
      app.kubernetes.io/part-of: club-canin-aylmer-members
      env: prod
  template:
    metadata:
      annotations:
        seriousben.com/repo: https://github.com/seriousben/club-canin-aylmer-members
      labels:
        app: frontend
        app.kubernetes.io/name: club-canin-aylmer-members
        app.kubernetes.io/part-of: club-canin-aylmer-members
        env: prod
    spec:
      containers:
      - image: docker.pkg.github.com/seriousben/club-canin-aylmer-members/site:latest
        name: frontend
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: github-docker-registry
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    seriousben.com/repo: https://github.com/seriousben/club-canin-aylmer-members
  labels:
    app.kubernetes.io/name: club-canin-aylmer-members
    app.kubernetes.io/part-of: club-canin-aylmer-members
    env: prod
  name: frontend
  namespace: club-canin-aylmer-members
spec:
  rules:
  - host: club-canin-aylmer.seriousben.com
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
  tls:
  - hosts:
    - club-canin-aylmer.seriousben.com
    secretName: club-canin-aylmer-seriousben-com-tls
